[package]
name = "rmm"
version = "0.1.0"
authors = ["e-k1 <elmok@hotmail.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltree = "0.10"
zip = "0.5"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
tui = "0.12"
termion = "1.5"
viuer = "0.5.1"
